feat: Add Kubernetes deployment and Ollama configuration
- Add GitHub Actions workflow for K8s deployment with environment selection
- Add Kubernetes manifests (Deployment, Service, Ingress)
- Configure for Ollama embeddings provider (removed Azure/OpenAI dependencies)
- Add namespace-based vector store implementation
- Add webhook service for LibreChat integration
- Update documentation with namespace schema guide

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,8 +13,7 @@ services:
   fastapi:
     build: .
     environment:
-      - DB_HOST=db
-      - DB_PORT=5432
+      - DATABASE_URL=postgresql://myuser:mypassword@db:5432/mydatabase
     ports:
       - "8000:8000"
     volumes:
