--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,58 @@
-langchain==0.3.26
-langchain-community==0.3.27
-langchain-openai==0.3.27
-langchain-core==0.3.75
-langchain-aws==0.2.1
-langchain-google-vertexai==2.0.27
-langchain_text_splitters==0.3.8 # 0.3.3
-boto3==1.34.144
-sqlalchemy==2.0.41
-python-dotenv==1.1.1
-fastapi==0.115.12
-psycopg2-binary==2.9.9
-pgvector==0.2.5
-uvicorn==0.28.0
-pypdf==6.0.0
-unstructured==0.16.11
-markdown==3.8.2
-networkx==3.2.1
-pandas==2.2.1
-openpyxl==3.1.5
-docx2txt==0.9
-pypandoc==1.15
-PyJWT==2.8.0
-asyncpg==0.29.0
-python-multipart==0.0.19
-sentence_transformers==3.1.1
-aiofiles==24.1.0
-rapidocr-onnxruntime==1.4.4
-opencv-python-headless==4.9.0.80
-pymongo==4.6.3
-langchain-mongodb==0.2.0
-langchain-ollama==0.3.3
-langchain-huggingface==0.1.0
-langchain-google-genai==2.1.10
-cryptography==45.0.5
-python-magic==0.4.27
-python-pptx==1.0.2
-xlrd==2.0.2
-pydantic==2.9.2
-chardet==5.2.0
+# Core langchain packages - version 1.x for ollama support
+langchain>=1.0.0
+langchain-core>=1.0.0
+langchain-community>=0.4.0
+langchain-text-splitters>=0.4.0
+
+# Langchain integrations
+langchain-ollama==1.0.0
+langchain-openai>=0.4.0
+langchain-aws>=0.3.0
+langchain-google-vertexai>=2.1.0
+langchain-google-genai>=2.1.10
+langchain-huggingface>=0.1.0
+# langchain-mongodb>=0.7.2  # COMMENTED: Incompatible with langchain>=1.0.0 (requires langchain<1.0)
+
+# AWS SDK
+boto3>=1.40.19
+
+# Web framework
+fastapi>=0.115.0
+uvicorn>=0.28.0
+python-multipart>=0.0.19
+
+# Database
+sqlalchemy>=2.0.36  # Minimum version for Python 3.13 compatibility (fixes time.clock issue)
+psycopg2-binary>=2.9.0
+pgvector>=0.2.5
+asyncpg>=0.29.0
+pymongo>=4.6.0
+
+# Document processing
+pypdf>=6.0.0
+unstructured>=0.16.0
+docx2txt>=0.9
+python-pptx>=1.0.0
+openpyxl>=3.1.0
+xlrd>=2.0.0
+pypandoc>=1.15
+markdown>=3.8.0
+
+# Embeddings & ML
+sentence_transformers>=3.1.0
+
+# OCR support
+rapidocr-onnxruntime>=1.4.0
+opencv-python-headless>=4.9.0
+
+# Utilities
+python-dotenv>=1.1.0
+aiofiles>=24.1.0
+chardet>=5.2.0
+networkx>=3.2.0
+pandas>=2.2.0
+PyJWT>=2.8.0
+cryptography>=45.0.0
+python-magic>=0.4.27
+pydantic>=2.9.0
+httpx>=0.24.0
