--- a/.github/workflows/rag.yaml
+++ b/.github/workflows/rag.yaml
@@ -84,7 +84,7 @@ jobs:
           IMAGE_TAG: ${{ env.IMAGE_TAG }}
         run: |
           # Build Docker image
-          docker build -f Docker.lite -t "${{ vars.REGISTRY }}/rag-agent:${IMAGE_TAG}" .
+          docker build -f Dockerfile.lite -t "${{ vars.REGISTRY }}/rag-agent:${IMAGE_TAG}" .
           docker push "${{ vars.REGISTRY }}/rag-agent:${IMAGE_TAG}"
 
       - name: Apply manifests
